JDK-6528013 : C1 CTW failure with -XX:+VerifyOops assert(allocates2(pc),"")
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Affected Version: 7
  • Priority: P4
  • Status: Closed
  • Resolution: Fixed
  • OS: solaris_9
  • CPU: sparc
  • Submitted: 2007-02-23
  • Updated: 2011-09-22
  • Resolved: 2011-04-24
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 Other
7Fixed hs21Fixed
Description
I am running C1 CTW on my sb2500 and hit this assert.

jaberwocky% /java/re/jdk/7/promoted/all/b08/binaries/solaris-sparc/fastdebug/bin/java -client -XX:+VerifyOops -Xss4m -verify -XX:-ShowMessageBoxOnError -XX:+CompileTheWorld -XX:CompileTheWorldStartAt=1 -Xbootclasspath/p:/net/vmsqe.sfbay/export/backup/testbase/CompileTheWorld/jarfiles/ABugsLife.jar
...
CompileTheWorld (68) : Incident/GifFileFilter
CompileTheWorld (69) : Incident/IncidentSearchDisplay
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc:  SuppressErrorAt=/codeBuffer.hpp:150
#
# An unexpected error has been detected by Java Runtime Environment:
#
#  Internal Error (/BUILD_AREA/jdk7.0/hotspot/src/share/vm/asm/codeBuffer.hpp, 150 [ Patched ]), pid=24480, tid=7
#
# Java VM: Java HotSpot(TM) Client VM (1.7.0-ea-fastdebug-b08-fastdebug mixed mode)
#
# Error: assert(allocates2(pc),"")
# An error report file with more information is saved as hs_err_pid24480.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#


jvmg VM shows the next stack trace:

Stack: [0xfe080000,0xfe100000),  sp=0xfe0fea20,  free space=506k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0x8459e8];;  __1cHVMErrorOreport_and_die6M_v_+0x8d0
V  [libjvm.so+0x35bf30];;  __1cYreport_assertion_failure6Fpkci1_v_+0xc0
V  [libjvm.so+0x1159b4];;  __1cLCodeSectionHset_end6MpC_v_+0x7c
V  [libjvm.so+0x115bb0];;  __1cRAbstractAssemblerEsync6M_v_+0xa8
V  [libjvm.so+0x1157d0];;  __1cRAbstractAssemblerJemit_long6Mi_v_+0x40
V  [libjvm.so+0x116fa4];;  __1cJAssemblerJemit_long6Mi_v_+0x34
V  [libjvm.so+0x137e4c];;  __1cJAssemblerJemit_data6Mi_v_+0x24
V  [libjvm.so+0x12eef8];;  __1cJAssemblerDstx6MpnMRegisterImpl_2i_v_+0xa0
V  [libjvm.so+0x11ff98];;  __1cOMacroAssemblerQ_verify_oop_addr6MnHAddress_pkc3i_v_+0x260
V  [libjvm.so+0x234294];;  __1cRC1_MacroAssemblerQverify_stack_oop6Mi_v_+0xcc
V  [libjvm.so+0x1e0778];;  __1cNLIR_AssemblerOverify_oop_map6MpnMCodeEmitInfo__v_+0x258
V  [libjvm.so+0x1de7dc];;  __1cNLIR_AssemblerJemit_call6MpnOLIR_OpJavaCall__v_+0x4c
V  [libjvm.so+0x1d109c];;  __1cOLIR_OpJavaCallJemit_code6MpnNLIR_Assembler__v_+0x24
V  [libjvm.so+0x1ddbe8];;  __1cNLIR_AssemblerNemit_lir_list6MpnILIR_List__v_+0x228
V  [libjvm.so+0x1dd9a4];;  __1cNLIR_AssemblerKemit_block6MpnKBlockBegin__v_+0x25c
V  [libjvm.so+0x1dd6bc];;  __1cNLIR_AssemblerJemit_code6MpnJBlockList__v_+0xac
V  [libjvm.so+0x182734];;  __1cLCompilationOemit_code_body6M_i_+0x16c
V  [libjvm.so+0x182b3c];;  __1cLCompilationTcompile_java_method6M_i_+0x2c4
V  [libjvm.so+0x182e40];;  __1cLCompilationOcompile_method6M_v_+0x148
V  [libjvm.so+0x183730];;  __1cLCompilation2t6MpnQAbstractCompiler_pnFciEnv_pnIciMethod_i_v_+0x398
V  [libjvm.so+0x186a18];;  __1cICompilerOcompile_method6MpnFciEnv_pnIciMethod_i_v_+0x90
V  [libjvm.so+0x2fec0c];;  __1cNCompileBrokerZinvoke_compiler_on_method6FpnLCompileTask__v_+0x6f0
V  [libjvm.so+0x2fdb48];;  __1cNCompileBrokerUcompiler_thread_loop6F_v_+0x6c8
V  [libjvm.so+0x7ea13c];;  __1cVcompiler_thread_entry6FpnKJavaThread_pnGThread__v_+0x8c
V  [libjvm.so+0x7e3ea4];;  __1cKJavaThreadRthread_main_inner6M_v_+0x14c
V  [libjvm.so+0x7e3d3c];;  __1cKJavaThreadDrun6M_v_+0x27c
V  [libjvm.so+0x6b8998];;  java_start+0x2c0

Comments
EVALUATION http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/87ce328c6a21
05-04-2011

EVALUATION verify_oop_maps needs a codespace check.
06-12-2007

SUGGESTED FIX *** /tmp/geta6602 Wed Dec 5 17:17:27 2007 --- c1_LIRAssembler.cpp Wed Dec 5 17:17:15 2007 *************** *** 786,791 **** --- 786,795 ---- _masm->verify_stack_oop(r->reg2stack() * VMRegImpl::stack_slot_size); } } + + check_codespace(); + CHECK_BAILOUT(); + s.next(); } VerifyOops = v;
06-12-2007