6528013: C1 CTW failure with -XX:+VerifyOops assert(allocates2(pc),"")

Reviewed-by: kvn, iveresov